--- a/css/common.css
+++ b/css/common.css
@@ -113,8 +113,8 @@ button {
 }
 
 .loader {
-  position: fixed;
-  top: 0;
+  /* position: fixed; */
+  /* top: 0; */
   left: 0;
   width: 100%;
   height: 100%;
